# quit-snoke-bot

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  backup.sh  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: tabex-protocol.agent.md
.github/workflows/: deploy.yml
bot/: __main__.py  config.py  taskiq_broker.py  tasks.py
bot/db/: engine.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 5fe0fedc8cb7_initial.py  a3b4c5d6e7f8_add_new_feature_tables.py  dd8220360a8c_created_at_timezone_aware.py
bot/dialogs/: __init__.py  menu.py
bot/handlers/: __init__.py  course.py  menu.py  mood.py  progress.py  settings.py  start.py
bot/keyboards/: inline.py
bot/middlewares/: throttle.py
bot/models/: __init__.py  achievement.py  course.py  craving_log.py  dose_log.py  mood_log.py  relapse_log.py  smoking_profile.py  user.py
bot/services/: course.py  schedule.py
bot/utils/: texts.py
tests/: conftest.py  test_course.py  test_handlers.py  test_keyboards_texts.py  test_new_features.py  test_schedule.py  test_tasks.py
