[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project]
name = "quit-smoke-bot"
version = "0.1.0"
description = "Telegram bot for quitting smoking with Tabex (cytisine) protocol"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15,<4",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "taskiq>=0.12",
    "taskiq-redis>=1.2",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "ruff>=0.8"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
